[tool.poetry]
name = "login-2fa"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.8.0"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.17"
aiosqlite = "^0.19.0"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
qrcode = {extras = ["pil"], version = "^7.4.2"}
pydantic = {version = "1.10.9", extras = ["email"]}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
